pom.xml updated

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <name>commons-http-utils</name>
+  <description>Provides extensions which are supposed to enhance security of Apache HTTPComponents</description>
+  <url>https://github.com/tuxbox/commons-http-utils.git</url>
+  <licenses>
+    <license>
+      <name>Apache License Version 2.0</name>
+      <url>https://github.com/tuxbox/common-http-utils/blob/master/LICENSE.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/tuxbox/commons-http-utils.git</url>
+  </scm>
+  <developers>
+    <developer>
+      <name>tuxbox</name>
+      <organization>sniggle.me</organization>
+      <roles>
+        <role>Maintainer</role>
+      </roles>
+    </developer>
+  </developers>
+
   <groupId>me.sniggle</groupId>
   <artifactId>commons-http-utils</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <properties>
     <cucumber.version>1.2.2</cucumber.version>
